<resources>
    <string name="app_name">Bhavishyath</string>
    <string name="title_activity_splash">Splash Activity</string>
    <string name="title_employee_list">Employees</string>
    <string name="title_employee_details">Employee Details</string>
    <string name="full_name">Name</string>
    <string name="phone">Enter phone number</string>
    <string name="add_employee">Add Employee</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="admin">Admin</string>
    <string name="employee">Employee</string>
    <string name="message">In order to change the visibility programmatically, you should use View.VISIBLE , View.INVISIBLE or View.GONE . Setting the visibility using myView.visibility</string>
    <string name="notifications_admin_channel_description">notifications_admin_channel_description</string>
    <string name="notifications_admin_channel_name">notifications_admin_channel_name</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="chat_screen">Chat</string>
    <string name="time_stamp">9:06 pm</string>
    <string name="logout">Logout</string>
    <string name="type_a_message">Type a message…</string>
    <string name="are_you_admin_click_here">Are you Admin? Click Here</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="search">Search</string>
    <string name="search_by_number">Search by number</string>
    <string name="employee_login">Employee Login</string>
    <string name="admin_login">Admin Login</string>
    <string name="admin_admin_com">admin@admin.com</string>
    <string name="_12345678">12345678</string>
    <string name="create_group">Create Group</string>
    <string name="new_group">New Group</string>
    <string name="no_data_found">No Data Found</string>
    <string name="profile">Profile</string>
    <string name="update">Update</string>
    <string name="done">Done</string>
    <string name="group_name">Group Name</string>

</resources>